# mx-cleanup

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  about.cpp  about.h  build.sh  common.h  debrand.sh  helper.cpp  helperlib.cpp  helperlib.h  images.qrc  license.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mx-cleanup  mx-cleanup.conf  mx-cleanup.desktop  mx-cleanup.install  mx-cleanup.pro  mx-cleanup_0.18.06.dsc  mx-cleanup_0.18.06.tar.xz  mx-cleanup_0.18.06_amd64.changes  mx-cleanup_0.18.06_amd64.deb  mx-cleanup_0.18.06_i386.deb  mx-cleanup_18.06.1.dsc  mx-cleanup_18.06.1.tar.xz  mx-cleanup_18.06.1_amd64.changes  mx-cleanup_18.06.1_amd64.deb  mx-cleanup_18.06.1_i386.deb  mx-cleanup_18.06.2.dsc  mx-cleanup_18.06.2.tar.xz  mx-cleanup_18.06.2_amd64.changes  mx-cleanup_18.06.2_amd64.deb  mx-cleanup_18.06.2_i386.deb  mx-cleanup_18.06.dsc  mx-cleanup_18.06.tar.xz  (+48 more)
.github/workflows/: release.yaml
debian/: changelog  control  copyright  files  install  mx-cleanup.manpages  postrm  rules
debs/: README.md  mx-cleanup_19.12.dsc  mx-cleanup_19.12.tar.xz  mx-cleanup_19.12_amd64.changes  mx-cleanup_19.12_amd64.deb  mx-cleanup_19.12_i386.deb  mx-cleanup_19.7.1.dsc  mx-cleanup_19.7.1.tar.xz  mx-cleanup_19.7.1_amd64.changes  mx-cleanup_19.7.1_amd64.deb  mx-cleanup_19.7.1_i386.deb  mx-cleanup_19.7.dsc  mx-cleanup_19.7.tar.xz  mx-cleanup_19.7_amd64.changes  mx-cleanup_19.7_amd64.deb  mx-cleanup_19.7_i386.deb  mx-cleanup_19.8.1.dsc  mx-cleanup_19.8.1.tar.xz  mx-cleanup_19.8.1_amd64.changes  mx-cleanup_19.8.1_amd64.deb  mx-cleanup_19.8.1_i386.deb  mx-cleanup_19.8.2.dsc  mx-cleanup_19.8.2.tar.xz  mx-cleanup_19.8.2_amd64.changes  mx-cleanup_19.8.2_amd64.deb  mx-cleanup_19.8.2_i386.deb  mx-cleanup_19.8.dsc  mx-cleanup_19.8.tar.xz  mx-cleanup_19.8_amd64.changes  mx-cleanup_19.8_amd64.deb  mx-cleanup_19.8_i386.deb  mx-cleanup_19.9.dsc  mx-cleanup_19.9.tar.xz  mx-cleanup_19.9_amd64.changes  mx-cleanup_19.9_i386.deb  mx-cleanup_20.6.1.dsc  mx-cleanup_20.6.1.tar.xz  mx-cleanup_20.6.1_amd64.changes  mx-cleanup_20.6.1_amd64.deb  mx-cleanup_20.6.1_i386.deb  (+287 more)
help/: license.html  mx-cleanup.1  mx-cleanup.html
scripts/: helper-terminal  helper-terminal-keep-open  mx-cleanup-launcher  org.mxlinux.pkexec.mx-cleanup-helper.policy  org.mxlinux.pkexec.mx-cleanup-helper.policy.in  org.mxlinux.pkexec.mx-cleanup-launcher.policy
tests/: test_utils.cpp
translations/: get_translations  mx-cleanup_af.ts  mx-cleanup_am.ts  mx-cleanup_ar.ts  mx-cleanup_ast.ts  mx-cleanup_be.ts  mx-cleanup_bg.ts  mx-cleanup_bn.ts  mx-cleanup_bs.ts  mx-cleanup_bs_BA.ts  mx-cleanup_ca.ts  mx-cleanup_ceb.ts  mx-cleanup_co.ts  mx-cleanup_cs.ts  mx-cleanup_cy.ts  mx-cleanup_da.ts  mx-cleanup_de.ts  mx-cleanup_el.ts  mx-cleanup_en.ts  mx-cleanup_en_GB.ts  mx-cleanup_en_US.ts  mx-cleanup_eo.ts  mx-cleanup_es.ts  mx-cleanup_es_ES.ts  mx-cleanup_et.ts  mx-cleanup_eu.ts  mx-cleanup_fa.ts  mx-cleanup_fi.ts  mx-cleanup_fi_FI.ts  mx-cleanup_fil.ts  mx-cleanup_fil_PH.ts  mx-cleanup_fr.ts  mx-cleanup_fr_BE.ts  mx-cleanup_fr_FR.ts  mx-cleanup_fy.ts  mx-cleanup_ga.ts  mx-cleanup_gd.ts  mx-cleanup_gl.ts  mx-cleanup_gl_ES.ts  mx-cleanup_gu.ts  (+90 more)
translations-desktop-file/: uploadlist.txt
translations-desktop-file/desktop-in/: mx-cleanup.desktop.in
translations-desktop-file/po/: LINGUAS  mx-cleanup-desktop_af.po  mx-cleanup-desktop_am.po  mx-cleanup-desktop_ar.po  mx-cleanup-desktop_ast.po  mx-cleanup-desktop_be.po  mx-cleanup-desktop_bg.po  mx-cleanup-desktop_bn.po  mx-cleanup-desktop_bs.po  mx-cleanup-desktop_bs_BA.po  mx-cleanup-desktop_ca.po  mx-cleanup-desktop_ceb.po  mx-cleanup-desktop_co.po  mx-cleanup-desktop_cs.po  mx-cleanup-desktop_cy.po  mx-cleanup-desktop_da.po  mx-cleanup-desktop_de.po  mx-cleanup-desktop_el.po  mx-cleanup-desktop_en_GB.po  mx-cleanup-desktop_en_US.po  mx-cleanup-desktop_eo.po  mx-cleanup-desktop_es.po  mx-cleanup-desktop_es_ES.po  mx-cleanup-desktop_et.po  mx-cleanup-desktop_eu.po  mx-cleanup-desktop_fa.po  mx-cleanup-desktop_fi.po  mx-cleanup-desktop_fi_FI.po  mx-cleanup-desktop_fil.po  mx-cleanup-desktop_fil_PH.po  mx-cleanup-desktop_fr.po  mx-cleanup-desktop_fr_BE.po  mx-cleanup-desktop_fr_FR.po  mx-cleanup-desktop_fy.po  mx-cleanup-desktop_ga.po  mx-cleanup-desktop_gd.po  mx-cleanup-desktop_gl.po  mx-cleanup-desktop_gl_ES.po  mx-cleanup-desktop_gu.po  mx-cleanup-desktop_ha.po  (+88 more)
translations-desktop-file/pot/: mx-cleanup-desktop.pot
translations/.tx/: config
